Description: Bug found during test creation > The difference in row 1 is about the constraint issue date < settlement > date). As the constraint is a real one (in reality it applies) and Excel > applies this constraint, I want to change Calc to apply the constraint > as well. Actual Results: . Expected Results: . Reproducible: Always User Profile Reset: No Additional Info: User-Agent: Mozilla/5.0 (Windows NT 6.1; Win64; x64; rv:53.0) Gecko/20100101 Firefox/53.0
Created attachment 133030 [details] document used for testing.
Winfried Donkers committed a patch related to this issue. It has been pushed to "master": http://cgit.freedesktop.org/libreoffice/core/commit/?id=87a5be1cb579cb1e215c39990986c0a770c18b50 tdf#107566 adjust constraints for Add-In function YIELDMAT. It will be available in 5.4.0. The patch should be included in the daily builds available at http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: http://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
Hello, Is this bug fixed? If so, could you please close it as RESOLVED FIXED?
(In reply to Xisco Faulí from comment #3) > Hello, > Is this bug fixed? > If so, could you please close it as RESOLVED FIXED? Sorry Xisco, I forgot.